# HIPBasicRaytracer

./: .gitignore  CMakeLists.txt  README.md  TODO  compile_commands.json
includes/: camera.hpp  color.hpp  common.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  pngwrapper.hpp  ray.hpp  sphere.hpp  vec3.hpp
libs/: CMakeLists.txt
src/: CMakeLists.txt  camera.cxx  main.cxx
